Fix deprecation warnings from Java 11 for tests